# loop-public

./: .dockerignore  .env.example  .envrc.swp  .gitignore  .implementation_plan.md  CLAUDE.md  Dockerfile  Dockerfile.auth  LOOP-Architecture.excalidraw  LOOP_Hypotheses_46_keep_fix_and_new.md  NAS_DASHBOARD_ARCHITECTURE.md  NAS_DEPLOYMENT_GUIDE.md  NAS_DEPLOYMENT_SIMPLE.md  NAS_QUICK_START.md  README.md  SETUP.md  SETUP_CHECKLIST.md  START_API_SERVER.md  Tasks 2b36a363106a8145878ff2796c1a6efc.csv  _Dashboard.md  _ENTRY_POINT.md  _Graph_Index.md  _HOME.md  _exec_vault  _test_n8n_fix.json  docker-compose.blue-green.yml  docker-compose.yml  entrypoint-auth.sh  impact_model_config.yml  loop-entity-creator.skill  nas-kanban-setup.md  nas-setup-comparison.md  nginx-blue-green.conf  nginx.conf  pyproject.toml
.claude/: settings.json
.obsidian/: graph.json  hotkeys.json
00_Inbox/: idea.md  tmp_prd_impact_expected_unified.md
00_Meta/: HOS.md  Hypothesis_Templates_Pack.md  LOOP_PHILOSOPHY.md  SSOT_CONTRACT.md  SSOT_WRITE_TARGETS.md  SYNC_ARCHITECTURE.md  TEAM_GUIDE_Task_Project_생성.md  TEAM_WORKFLOW.md  Vault_Ontology_Schema.md  _VAULT_REGISTRY.md  archive_policy.md  build_config.md  members.yaml  query_recipes.md  relation_types.md  schema_constants.yaml  schema_registry.md
01_North_Star/: 10년 비전.md  MH1_루프는_지속적_문제.md  MH2_행동개입_효과.md  MH3_데이터_모델링_가능.md  MH4_단계적_확장_가능.md  _INDEX.md
10_Study/: _MOC 온톨로지 학습.md
20_Ontology/: GraphRAG 최적화 가이드.md  _MOC 온톨로지 개발.md
20_Strategy/: Growth_Roadmap_Mermaid_RAW.txt  Revenue_Roadmap.md  Revenue_Value_Chain_Charts_Only.md  Revenue_Value_Chain_Deep_Dive.md  Value_Chain_Mermaid_RAW.txt  _MOC_전략.md  _template_track.md
30_Ontology/: GraphRAG 최적화 가이드.md  _MOC 온톨로지 개발.md  _Strategy_Link.md
30_Strategy/: (LV1 Strategic Hypotheses) 3-year strategy (조건 기반) 정리.md  12-month 실행 계획(숫자 기반) 정리.md
(+4687 files in other folders)
