[project]
name = "loop-vault"
version = "0.1.0"
description = ""
authors = [
    {name = "gim-eunhyang",email = "eunhyang90218@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "firebase-admin (>=7.1.0,<8.0.0)",
    "openai (>=2.15.0,<3.0.0)"
]

[project.optional-dependencies]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "fastapi-mcp>=0.4.0; python_version>='3.10'",
    "pdfplumber>=0.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "jinja2>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
